@@ -38,6 +38,8 @@
 <p>2018-03-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/mtv.c (ReadMTVImage): Add some elementary tracing to MTV
+reader.</li>
 <li>coders/png.c (ReadMNGImage): Fix SourceForge issue 554
 &quot;Divide-by-zero in ReadMNGImage (coders/png.c)&quot;.  (Credit to Trace
 Probe)</li>
